// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/ActiontechTable-FilterContainer render date-range type when filter is array 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center custom-date-range-class-name actiontech-table-filter-container-namespace full-width-element css-de5ds5"
      style="flex-wrap: wrap; margin-bottom: -12px; color: red;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <div
          class="css-1y8q0oh"
        >
          <div
            class="ant-picker ant-picker-range ant-picker-small css-dev-only-do-not-override-1q11hvz basic-range-picker-wrapper custom-picker-prefix css-1o244th"
            style="min-width: 320px;"
          >
            <div
              class="ant-picker-input ant-picker-input-active"
            >
              <input
                autocomplete="off"
                placeholder="开始时间"
                readonly=""
                size="12"
                value="2023-12-01"
              />
            </div>
            <div
              class="ant-picker-range-separator"
            >
              <svg
                fill="currentColor"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                />
              </svg>
            </div>
            <div
              class="ant-picker-input"
            >
              <input
                autocomplete="off"
                placeholder="结束时间"
                readonly=""
                size="12"
                value="2023-12-03"
              />
            </div>
            <div
              class="ant-picker-active-bar"
              style="left: 0px; width: 0px; position: absolute;"
            />
            <span
              class="ant-picker-suffix"
            >
              <span
                class="custom-range-picker-filter-label"
              >
                日期选择
              </span>
            </span>
            <span
              class="ant-picker-clear"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 14 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterContainer render date-range type when filter is array 2`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center custom-date-range-class-name actiontech-table-filter-container-namespace full-width-element css-de5ds5"
      style="flex-wrap: wrap; margin-bottom: -12px; color: red;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <div
          class="css-1y8q0oh"
        >
          <div
            class="ant-picker ant-picker-range ant-picker-small css-dev-only-do-not-override-1q11hvz basic-range-picker-wrapper custom-picker-prefix css-1o244th"
            style="min-width: 320px;"
          >
            <div
              class="ant-picker-input"
            >
              <input
                autocomplete="off"
                placeholder="开始时间"
                readonly=""
                size="12"
                value="2023-12-01"
              />
            </div>
            <div
              class="ant-picker-range-separator"
            >
              <svg
                fill="currentColor"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                />
              </svg>
            </div>
            <div
              class="ant-picker-input ant-picker-input-active"
            >
              <input
                autocomplete="off"
                placeholder="结束时间"
                size="12"
                value="2023-12-06"
              />
            </div>
            <div
              class="ant-picker-active-bar"
              style="left: 0px; width: 0px; position: absolute;"
            />
            <span
              class="ant-picker-suffix"
            >
              <span
                class="custom-range-picker-filter-label"
              >
                日期选择
              </span>
            </span>
            <span
              class="ant-picker-clear"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 14 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                />
              </svg>
            </span>
            <div
              class="ant-picker-dropdown css-dev-only-do-not-override-1q11hvz ant-picker-dropdown-range ant-picker-dropdown-placement-bottomLeft"
              style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
            >
              <div
                class="ant-picker-range-wrapper ant-picker-date-range-wrapper"
                style="min-width: 0;"
              >
                <div
                  class="ant-picker-range-arrow"
                  style="left: 0px;"
                />
                <div
                  class="ant-picker-panel-container"
                  style="margin-left: 0px;"
                >
                  <div
                    class="ant-picker-panel-layout"
                  >
                    <div>
                      <div
                        class="ant-picker-panels"
                      >
                        <div
                          class="ant-picker-panel ant-picker-panel-has-range"
                          tabindex="-1"
                        >
                          <div
                            class="ant-picker-date-panel"
                          >
                            <div
                              class="ant-picker-header"
                            >
                              <button
                                class="ant-picker-header-super-prev-btn"
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="ant-picker-super-prev-icon"
                                />
                              </button>
                              <button
                                class="ant-picker-header-prev-btn"
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="prev-icon"
                                >
                                  <svg
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="m6.316 7 2.888 2.888-.825.824L4.667 7l3.712-3.712.825.825z"
                                      fill="#292C33"
                                    />
                                  </svg>
                                </span>
                              </button>
                              <div
                                class="ant-picker-header-view"
                              >
                                <button
                                  class="ant-picker-month-btn"
                                  tabindex="-1"
                                  type="button"
                                >
                                  Dec
                                </button>
                                <button
                                  class="ant-picker-year-btn"
                                  tabindex="-1"
                                  type="button"
                                >
                                  2023
                                </button>
                              </div>
                              <button
                                class="ant-picker-header-next-btn"
                                style="visibility: hidden;"
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="next-icon"
                                >
                                  <svg
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                                    />
                                  </svg>
                                </span>
                              </button>
                              <button
                                class="ant-picker-header-super-next-btn"
                                style="visibility: hidden;"
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="ant-picker-super-next-icon"
                                />
                              </button>
                            </div>
                            <div
                              class="ant-picker-body"
                            >
                              <table
                                class="ant-picker-content"
                              >
                                <thead>
                                  <tr>
                                    <th>
                                      Su
                                    </th>
                                    <th>
                                      Mo
                                    </th>
                                    <th>
                                      Tu
                                    </th>
                                    <th>
                                      We
                                    </th>
                                    <th>
                                      Th
                                    </th>
                                    <th>
                                      Fr
                                    </th>
                                    <th>
                                      Sa
                                    </th>
                                  </tr>
                                </thead>
                                <tbody>
                                  <tr>
                                    <td
                                      class="ant-picker-cell"
                                      title="2023-11-26"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        26
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell"
                                      title="2023-11-27"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        27
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell"
                                      title="2023-11-28"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        28
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell"
                                      title="2023-11-29"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        29
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-end"
                                      title="2023-11-30"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        30
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-start ant-picker-cell-in-view ant-picker-cell-range-start"
                                      title="2023-12-01"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        1
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-in-view ant-picker-cell-in-range"
                                      title="2023-12-02"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        2
                                      </div>
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-in-view ant-picker-cell-in-range"
                                      title="2023-12-03"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        3
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-in-view ant-picker-cell-in-range"
                                      title="2023-12-04"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        4
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-in-view ant-picker-cell-in-range"
                                      title="2023-12-05"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        5
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-in-view ant-picker-cell-range-end ant-picker-cell-selected"
                                      title="2023-12-06"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        6
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-in-view"
                                      title="2023-12-07"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        7
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-in-view"
                                      title="2023-12-08"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        8
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-in-view"
                                      title="2023-12-09"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        9
                                      </div>
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-in-view"
                                      title="2023-12-10"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        10
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-in-view"
                                      title="2023-12-11"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        11
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-in-view ant-picker-cell-today"
                                      title="2023-12-12"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        12
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-13"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        13
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-14"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        14
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-15"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        15
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-16"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        16
                                      </div>
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-17"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        17
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-18"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        18
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-19"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        19
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-20"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        20
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-21"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        21
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-22"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        22
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-23"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        23
                                      </div>
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-24"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        24
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-25"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        25
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-26"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        26
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-27"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        27
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-28"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        28
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-29"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        29
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2023-12-30"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        30
                                      </div>
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-end ant-picker-cell-in-view"
                                      title="2023-12-31"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        31
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-start"
                                      title="2024-01-01"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        1
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-01-02"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        2
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-01-03"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        3
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-01-04"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        4
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-01-05"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        5
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-01-06"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        6
                                      </div>
                                    </td>
                                  </tr>
                                </tbody>
                              </table>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-picker-panel ant-picker-panel-has-range"
                          tabindex="-1"
                        >
                          <div
                            class="ant-picker-date-panel"
                          >
                            <div
                              class="ant-picker-header"
                            >
                              <button
                                class="ant-picker-header-super-prev-btn"
                                style="visibility: hidden;"
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="ant-picker-super-prev-icon"
                                />
                              </button>
                              <button
                                class="ant-picker-header-prev-btn"
                                style="visibility: hidden;"
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="prev-icon"
                                >
                                  <svg
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="m6.316 7 2.888 2.888-.825.824L4.667 7l3.712-3.712.825.825z"
                                      fill="#292C33"
                                    />
                                  </svg>
                                </span>
                              </button>
                              <div
                                class="ant-picker-header-view"
                              >
                                <button
                                  class="ant-picker-month-btn"
                                  tabindex="-1"
                                  type="button"
                                >
                                  Jan
                                </button>
                                <button
                                  class="ant-picker-year-btn"
                                  tabindex="-1"
                                  type="button"
                                >
                                  2024
                                </button>
                              </div>
                              <button
                                class="ant-picker-header-next-btn"
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="next-icon"
                                >
                                  <svg
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                                    />
                                  </svg>
                                </span>
                              </button>
                              <button
                                class="ant-picker-header-super-next-btn"
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="ant-picker-super-next-icon"
                                />
                              </button>
                            </div>
                            <div
                              class="ant-picker-body"
                            >
                              <table
                                class="ant-picker-content"
                              >
                                <thead>
                                  <tr>
                                    <th>
                                      Su
                                    </th>
                                    <th>
                                      Mo
                                    </th>
                                    <th>
                                      Tu
                                    </th>
                                    <th>
                                      We
                                    </th>
                                    <th>
                                      Th
                                    </th>
                                    <th>
                                      Fr
                                    </th>
                                    <th>
                                      Sa
                                    </th>
                                  </tr>
                                </thead>
                                <tbody>
                                  <tr>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-end"
                                      title="2023-12-31"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        31
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-start ant-picker-cell-in-view"
                                      title="2024-01-01"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        1
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-02"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        2
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-03"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        3
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-04"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        4
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-05"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        5
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-06"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        6
                                      </div>
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-07"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        7
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-08"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        8
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-09"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        9
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-10"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        10
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-11"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        11
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-12"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        12
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-13"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        13
                                      </div>
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-14"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        14
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-15"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        15
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-16"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        16
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-17"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        17
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-18"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        18
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-19"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        19
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-20"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        20
                                      </div>
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-21"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        21
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-22"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        22
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-23"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        23
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-24"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        24
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-25"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        25
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-26"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        26
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-27"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        27
                                      </div>
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-28"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        28
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-29"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        29
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-in-view"
                                      title="2024-01-30"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        30
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-end ant-picker-cell-in-view"
                                      title="2024-01-31"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        31
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled ant-picker-cell-start"
                                      title="2024-02-01"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        1
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-02-02"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        2
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-02-03"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        3
                                      </div>
                                    </td>
                                  </tr>
                                  <tr>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-02-04"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        4
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-02-05"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        5
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-02-06"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        6
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-02-07"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        7
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-02-08"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        8
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-02-09"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        9
                                      </div>
                                    </td>
                                    <td
                                      class="ant-picker-cell ant-picker-cell-disabled"
                                      title="2024-02-10"
                                    >
                                      <div
                                        class="ant-picker-cell-inner"
                                      >
                                        10
                                      </div>
                                    </td>
                                  </tr>
                                </tbody>
                              </table>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterContainer render input type 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center custom-input-class-name actiontech-table-filter-container-namespace full-width-element css-de5ds5"
      style="flex-wrap: wrap; margin-bottom: -12px; color: red;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <span
          class="ant-input-affix-wrapper basic-input-wrapper custom-input-namespace css-1v8xzxw ant-input-affix-wrapper-sm css-dev-only-do-not-override-mlhibv"
        >
          <span
            class="ant-input-prefix"
          >
            文本输入框
          </span>
          <input
            class="ant-input ant-input-sm css-dev-only-do-not-override-mlhibv"
            placeholder="请输入{{name}}"
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterContainer render search input type 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center custom-wrapper-search-input-class actiontech-table-filter-container-namespace full-width-element css-de5ds5"
      style="flex-wrap: wrap; margin-bottom: -12px; color: red;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <span
          class="ant-input-affix-wrapper basic-input-wrapper custom-input-namespace filter-search-input css-1v8xzxw ant-input-affix-wrapper-sm css-dev-only-do-not-override-mlhibv"
        >
          <input
            class="ant-input ant-input-sm css-dev-only-do-not-override-mlhibv"
            placeholder="请输入{{name}}"
            type="text"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <svg
              class="pointer custom-icon custom-icon-search"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m10.518 9.693 2.499 2.498-.826.825-2.498-2.498a5.252 5.252 0 0 1-8.527-4.101 5.25 5.25 0 0 1 5.25-5.25 5.252 5.252 0 0 1 4.102 8.526m-1.17-.433a4.082 4.082 0 0 0-2.931-6.927 4.08 4.08 0 0 0-4.084 4.084 4.082 4.082 0 0 0 6.927 2.93z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterContainer render search input type 2`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center custom-wrapper-search-input-class actiontech-table-filter-container-namespace full-width-element css-de5ds5"
      style="flex-wrap: wrap; margin-bottom: -12px; color: red;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <span
          class="ant-input-affix-wrapper basic-input-wrapper custom-input-namespace filter-search-input css-1v8xzxw ant-input-affix-wrapper-sm css-dev-only-do-not-override-mlhibv"
        >
          <input
            class="ant-input ant-input-sm css-dev-only-do-not-override-mlhibv"
            placeholder="请输入{{name}}"
            type="text"
            value="123"
          />
          <span
            class="ant-input-suffix"
          >
            <svg
              class="pointer custom-icon custom-icon-search"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m10.518 9.693 2.499 2.498-.826.825-2.498-2.498a5.252 5.252 0 0 1-8.527-4.101 5.25 5.25 0 0 1 5.25-5.25 5.252 5.252 0 0 1 4.102 8.526m-1.17-.433a4.082 4.082 0 0 0-2.931-6.927 4.08 4.08 0 0 0-4.084 4.084 4.082 4.082 0 0 0 6.927 2.93z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterContainer render select type when filterKey is array 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center custom-select-class actiontech-table-filter-container-namespace full-width-element css-de5ds5"
      style="flex-wrap: wrap; margin-bottom: -12px;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <div
          class="ant-select ant-select-sm ant-select-borderless basic-select-wrapper custom-select-namespace css-pti5z8 css-dev-only-do-not-override-jx040l ant-select-single ant-select-allow-clear ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-search"
            >
              <input
                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                aria-autocomplete="list"
                aria-controls="rc_select_TEST_OR_SSR_list"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="rc_select_TEST_OR_SSR_list"
                autocomplete="off"
                class="ant-select-selection-search-input"
                id="rc_select_TEST_OR_SSR"
                readonly=""
                role="combobox"
                style="opacity: 0;"
                type="search"
                unselectable="on"
                value=""
              />
            </span>
            <span
              class="ant-select-selection-placeholder"
            >
              <span
                class="custom-select-placeholder css-qly0fu"
              >
                <span
                  class="custom-select-placeholder-prefix"
                >
                  多个目标值筛选的下拉
                </span>
                <span
                  class="custom-select-placeholder-value"
                >
                  请选择{{name}}
                </span>
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterContainer render select type when filterKey is array 2`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center custom-select-class actiontech-table-filter-container-namespace full-width-element css-de5ds5"
      style="flex-wrap: wrap; margin-bottom: -12px;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <div
          class="ant-select ant-select-sm ant-select-borderless basic-select-wrapper custom-select-namespace css-pti5z8 css-dev-only-do-not-override-jx040l ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-open"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-search"
            >
              <input
                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                aria-autocomplete="list"
                aria-controls="rc_select_TEST_OR_SSR_list"
                aria-expanded="true"
                aria-haspopup="listbox"
                aria-owns="rc_select_TEST_OR_SSR_list"
                autocomplete="off"
                class="ant-select-selection-search-input"
                id="rc_select_TEST_OR_SSR"
                readonly=""
                role="combobox"
                style="opacity: 0;"
                type="search"
                unselectable="on"
                value=""
              />
            </span>
            <span
              class="ant-select-selection-placeholder"
            >
              <span
                class="custom-select-placeholder css-qly0fu"
              >
                <span
                  class="custom-select-placeholder-prefix"
                >
                  多个目标值筛选的下拉
                </span>
                <span
                  class="custom-select-placeholder-value"
                >
                  请选择{{name}}
                </span>
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up custom-select-popup-wrapper css-dev-only-do-not-override-jx040l ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; padding: 0px; min-width: 0;"
    >
      <div>
        <span
          class="ant-input-affix-wrapper basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless css-dev-only-do-not-override-zxd6s9"
        >
          <input
            class="ant-input ant-input-borderless css-dev-only-do-not-override-zxd6s9"
            placeholder="搜索"
            type="text"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-input-clear-icon ant-input-clear-icon-hidden"
              role="button"
              tabindex="-1"
            >
              <svg
                fill="currentColor"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                />
              </svg>
            </span>
          </span>
        </span>
        <div
          class="css-15pnbqu"
        >
          <div
            class="rc-virtual-list"
            style="position: relative;"
          >
            <div
              class="rc-virtual-list-holder"
              style="max-height: 256px; overflow-y: auto;"
            >
              <div>
                <div
                  class="rc-virtual-list-holder-inner"
                  id="rc_select_TEST_OR_SSR_list"
                  role="listbox"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-active"
                    id="rc_select_TEST_OR_SSR_list_0"
                    role="option"
                    title="a"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      a
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                    id="rc_select_TEST_OR_SSR_list_1"
                    role="option"
                    title="c"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      c
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterContainer render select type when filterKey is string 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center custom-select-class actiontech-table-filter-container-namespace full-width-element css-de5ds5"
      style="flex-wrap: wrap; margin-bottom: -12px;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <div
          class="ant-select ant-select-sm ant-select-borderless basic-select-wrapper custom-select-namespace css-pti5z8 css-dev-only-do-not-override-jx040l ant-select-single ant-select-allow-clear ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-search"
            >
              <input
                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                aria-autocomplete="list"
                aria-controls="rc_select_TEST_OR_SSR_list"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="rc_select_TEST_OR_SSR_list"
                autocomplete="off"
                class="ant-select-selection-search-input"
                id="rc_select_TEST_OR_SSR"
                readonly=""
                role="combobox"
                style="opacity: 0;"
                type="search"
                unselectable="on"
                value=""
              />
            </span>
            <span
              class="ant-select-selection-placeholder"
            >
              <span
                class="custom-select-placeholder css-qly0fu"
              >
                <span
                  class="custom-select-placeholder-prefix"
                >
                  单值筛选的下拉
                </span>
                <span
                  class="custom-select-placeholder-value"
                >
                  请选择{{name}}
                </span>
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterContainer render select type when filterKey is string 2`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center custom-select-class actiontech-table-filter-container-namespace full-width-element css-de5ds5"
      style="flex-wrap: wrap; margin-bottom: -12px;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <div
          class="ant-select ant-select-sm ant-select-borderless basic-select-wrapper custom-select-namespace css-pti5z8 css-dev-only-do-not-override-jx040l ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-open"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-search"
            >
              <input
                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                aria-autocomplete="list"
                aria-controls="rc_select_TEST_OR_SSR_list"
                aria-expanded="true"
                aria-haspopup="listbox"
                aria-owns="rc_select_TEST_OR_SSR_list"
                autocomplete="off"
                class="ant-select-selection-search-input"
                id="rc_select_TEST_OR_SSR"
                readonly=""
                role="combobox"
                style="opacity: 0;"
                type="search"
                unselectable="on"
                value=""
              />
            </span>
            <span
              class="ant-select-selection-placeholder"
            >
              <span
                class="custom-select-placeholder css-qly0fu"
              >
                <span
                  class="custom-select-placeholder-prefix"
                >
                  单值筛选的下拉
                </span>
                <span
                  class="custom-select-placeholder-value"
                >
                  请选择{{name}}
                </span>
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up custom-select-popup-wrapper css-dev-only-do-not-override-jx040l ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; padding: 0px; min-width: 0;"
    >
      <div>
        <span
          class="ant-input-affix-wrapper basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless css-dev-only-do-not-override-zxd6s9"
        >
          <input
            class="ant-input ant-input-borderless css-dev-only-do-not-override-zxd6s9"
            placeholder="搜索"
            type="text"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <span
              class="ant-input-clear-icon ant-input-clear-icon-hidden"
              role="button"
              tabindex="-1"
            >
              <svg
                fill="currentColor"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                />
              </svg>
            </span>
          </span>
        </span>
        <div
          class="css-15pnbqu"
        >
          <div
            class="rc-virtual-list"
            style="position: relative;"
          >
            <div
              class="rc-virtual-list-holder"
              style="max-height: 256px; overflow-y: auto;"
            >
              <div>
                <div
                  class="rc-virtual-list-holder-inner"
                  id="rc_select_TEST_OR_SSR_list"
                  role="listbox"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option ant-select-item-option-active"
                    id="rc_select_TEST_OR_SSR_list_0"
                    role="option"
                    title="a"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      a
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                  <div
                    aria-selected="false"
                    class="ant-select-item ant-select-item-option"
                    id="rc_select_TEST_OR_SSR_list_1"
                    role="option"
                    title="c"
                  >
                    <div
                      class="ant-select-item-option-content"
                    >
                      c
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterContainer render wrapper style for all custom type 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center custom-wrapper-class actiontech-table-filter-container-namespace full-width-element css-de5ds5"
      style="flex-wrap: wrap; margin-bottom: -12px; color: red;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 12px; padding-bottom: 12px;"
      >
        <div
          class="ant-select ant-select-sm ant-select-borderless basic-select-wrapper custom-select-namespace css-pti5z8 css-dev-only-do-not-override-jx040l ant-select-single ant-select-allow-clear ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-search"
            >
              <input
                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                aria-autocomplete="list"
                aria-controls="rc_select_TEST_OR_SSR_list"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="rc_select_TEST_OR_SSR_list"
                autocomplete="off"
                class="ant-select-selection-search-input"
                id="rc_select_TEST_OR_SSR"
                readonly=""
                role="combobox"
                style="opacity: 0;"
                type="search"
                unselectable="on"
                value=""
              />
            </span>
            <span
              class="ant-select-selection-placeholder"
            >
              <span
                class="custom-select-placeholder css-qly0fu"
              >
                <span
                  class="custom-select-placeholder-prefix"
                >
                  下拉
                </span>
                <span
                  class="custom-select-placeholder-value"
                >
                  请选择{{name}}
                </span>
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          />
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 12px; padding-bottom: 12px;"
      >
        <div
          class="css-1y8q0oh"
        >
          <div
            class="ant-picker ant-picker-range ant-picker-small css-dev-only-do-not-override-1q11hvz basic-range-picker-wrapper custom-picker-prefix css-1o244th"
            style="min-width: 320px;"
          >
            <div
              class="ant-picker-input ant-picker-input-active"
            >
              <input
                autocomplete="off"
                placeholder="开始时间"
                readonly=""
                size="12"
                value=""
              />
            </div>
            <div
              class="ant-picker-range-separator"
            >
              <svg
                fill="currentColor"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                />
              </svg>
            </div>
            <div
              class="ant-picker-input"
            >
              <input
                autocomplete="off"
                placeholder="结束时间"
                readonly=""
                size="12"
                value=""
              />
            </div>
            <div
              class="ant-picker-active-bar"
              style="left: 0px; width: 0px; position: absolute;"
            />
            <span
              class="ant-picker-suffix"
            >
              <span
                class="custom-range-picker-filter-label"
              >
                日期选择
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 12px; padding-bottom: 12px;"
      >
        <span
          class="ant-input-affix-wrapper basic-input-wrapper custom-input-namespace css-1v8xzxw ant-input-affix-wrapper-sm css-dev-only-do-not-override-mlhibv"
        >
          <span
            class="ant-input-prefix"
          >
            输入框
          </span>
          <input
            class="ant-input ant-input-sm css-dev-only-do-not-override-mlhibv"
            placeholder="请输入{{name}}"
            type="text"
            value=""
          />
        </span>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 12px;"
      >
        <span
          class="ant-input-affix-wrapper basic-input-wrapper custom-input-namespace filter-search-input css-1v8xzxw ant-input-affix-wrapper-sm css-dev-only-do-not-override-mlhibv"
        >
          <input
            class="ant-input ant-input-sm css-dev-only-do-not-override-mlhibv"
            placeholder="请输入{{name}}"
            type="text"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <svg
              class="pointer custom-icon custom-icon-search"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m10.518 9.693 2.499 2.498-.826.825-2.498-2.498a5.252 5.252 0 0 1-8.527-4.101 5.25 5.25 0 0 1 5.25-5.25 5.252 5.252 0 0 1 4.102 8.526m-1.17-.433a4.082 4.082 0 0 0-2.931-6.927 4.08 4.08 0 0 0-4.084 4.084 4.082 4.082 0 0 0 6.927 2.93z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</body>
`;
